# S3-CIMA

./: .gitignore  README.md  pyproject.toml
S3CIMA/: __init__.py  downsample.py  model.py  utils.py
S3CIMA/HCC_MAIT_STUDY/: integrationAgg.ipynb
S3CIMA/HCC_MAIT_STUDY/.ipynb_checkpoints/: scRNAseq-Zheng-checkpoint.ipynb
s3_cima/: S3CIMA_example.ipynb  modules_scima.py  plotting_scima.py
src/s3_cima/: downsample.py
src/s3cima/: __init__.py  modules_scima.py
